# whats-playing

./: .gitignore  README.md  compose.yml
webapp/: README.md  pyproject.toml
webapp/config/settings/: base.py  local.py
webapp/whatsplaying/core/: apps.py
webapp/whatsplaying/showtimes/: admin.py  apps.py  models.py
webapp/whatsplaying/showtimes/migrations/: 0001_initial.py
