[project]
name = "whats-playing"
version = "0.1.0"
description = "A movie showtime aggregator for Nevada County, CA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "psycopg[binary]>=3.2.6",
]

[project.optional-dependencies]
dev = []
prod = [
    "gunicorn",
    "whitenoise"
]
